--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fengyuanchen/datepicker": "github:fengyuanchen/datepicker",
     "autosize": "^3.0.20",
+    "chart.js": "^2.4.0",
     "normalize.css": "^5.0.0",
     "select2": "^4.0.3",
     "typicons.font": "^2.0.8"
