--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "jenssegers/date": "^3.2",
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "^5.3.0",
+        "maatwebsite/excel": "^2.1",
         "nesbot/carbon": "^1.21"
     },
     "require-dev": {
