--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "barryvdh/laravel-snappy": "^0.3.1",
         "cviebrock/eloquent-sluggable": "^4.1",
+        "filp/whoops": "^2.1",
         "guzzlehttp/guzzle": "^6.2",
         "h4cc/wkhtmltoimage-amd64": "^0.12.3",
         "h4cc/wkhtmltopdf-amd64": "^0.12.3",
